fix minor and projects align right

--- a/style.css
+++ b/style.css
@@ -68,12 +68,13 @@ a:hover{
 .container1{
     width: 100%;
     color: white;
-    background-color: #27ae60;
+    background-color: #2ecc71;
     text-align: center;
     padding-top: 5rem;
     padding-bottom: 3rem;
     height: 100vh;
     display: table;
+    border-bottom: 0.3rem #27ae60 dashed;
 }
 
 #logo{
@@ -133,7 +134,6 @@ button::-moz-focus-inner {
     border-radius: 100%;
     background: #eee no-repeat center;
     background-size: cover;
-    margin: 1rem 0rem 1rem 0rem;
 }
 
 #profile{
@@ -146,13 +146,30 @@ button::-moz-focus-inner {
     grid-column: 1/3;
     align-self: center;
     margin-left: 2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding: 1rem 0rem 1rem 0rem;
 }
 .container2 > div{
     /*border: 1px black solid;*/
 }
+.h1wrap > h1, .container2 > h1{
+    border-bottom: 3px #3498db solid;
+    display: inline-block;
+}
+
+.h1wrap{
+    grid-column: 1/5;
+    margin-left: 2rem;
+    margin-right: 3rem;
+    text-align: right;
+}
 .container2 > h1{
     border-bottom: 3px #3498db solid;
     margin-left: 2rem;
+}
+.container2 > .center{
+    grid-column: 1/5;
 }
 
 .right{
@@ -160,7 +177,8 @@ button::-moz-focus-inner {
     grid-column: 3/5;
     font-size: 20px;
     align-self: center;
-    margin: 3rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
     text-align: justify;
 }
 .right > :first-child{
@@ -174,8 +192,9 @@ button::-moz-focus-inner {
     margin-bottom: 0.5rem;
 }
 
-.container2 > h1#projects{
-    
+.h1wrap > h1#projects{
+    text-align: right;
+    text-align: center;
 }
 .left > p{
     margin-top: 1rem;
